scss/_projects.scss
.projects
{
    text-align: center;

    @media #{$tablet}
    {
        max-width: 700px;
        margin: 0 auto;
    }

    @media #{$desktop}
    {
        max-width: 1140px;
        margin: 0 auto;
    }

    & > h2
    {
        margin-top: 30px;
        margin-bottom: 16px;

        @include TYPE-HeaderH2;

        @media #{$tablet}
        {
            margin-top: 50px;
        }
    }

    & > p
    {
        margin-bottom: 30px;
        padding: 0 20px;

        @include TYPE-ParagraphDescriptor;

        @media #{$tablet}
        {
            width: 350px;
            margin: 0 auto 30px auto;
        }

        @media #{$desktop}
        {
            width: inherit;
            margin: 0 auto 50px auto;
        }

        a
        {
            text-decoration: none;

            color: $color-primary;
        }
    }

    &__cards
    {
        display: flex;

        flex-wrap: wrap;
        justify-content: space-around;
    }

    &__card
    {
        &--dribbble,
        &--medium
        {
            position: relative;

            display: none;

            box-sizing: border-box;
            width: 340px;
            height: 290px;
            margin: 15px 0;
            padding: 20px;

            text-align: left;

            background-color: $color-white;

            justify-content: center;

            &:nth-child(-n+2)
            {
                display: inline-flex;
            }


            @media #{$tablet}
            {
                width: 340px;
                height: 305px;
                margin: 5px 0;

                &:nth-child(-n+4)
                {
                    display: inline-flex;
                }
            }

            @media #{$desktop}
            {
                display: inline-flex;

                width: 360px;
                height: 320px;
                margin: 20px 0;
            }
        }

        &--dribbble
        {
            img
            {
                width: 100%;

                object-fit: contain;
                object-position: top;
            }

            &:hover
            {
                &::after
                {
                    font-family: $type-body;
                    font-size: 22px;

                    position: absolute;
                    top: 0;

                    display: flex;

                    box-sizing: border-box;
                    width: 100%;
                    height: 100%;
                    padding-top: 40px;

                    content: 'View on Dribbble';
                    cursor: pointer;

                    opacity: .95;
                    color: white;
                    background-color: #ff6679;
                    background-image: url('/img/dribble.svg');
                    background-repeat: no-repeat;
                    background-position: center 41%;

                    justify-content: center;
                    align-items: center;
                }
            }
        }

        &--medium
        {
            h4
            {
                margin: 0;

                letter-spacing: -.5px;

                @include TYPE-ProjectsTitle;
            }
        }
    }


    &__avatar
    {
        position: absolute;
        bottom: 14px;
        left: 20px;

        display: inline-flex;

        margin: 0;

        color: $color-grey;

        @include TYPE-ProjectsAuthor;
        align-items: center;


        img
        {
            width: 32px;
            height: 32px;
            margin-right: 10px;

            border-radius: 50%;
        }
    }

    button
    {
        width: 260px;
        margin: 20px 0 30px 0;
        cursor: pointer;

        @media #{$tablet}
        {
            margin: 30px 0 40px 0;
        }
    }
}

